<resources>
    <string name="app_name">E-kay</string>

    <!-- registration form strings -->
    <string name="registration_header">Registration Form</string>
    <string name="name">Full Name:</string>
    <string name="age">Age:</string>
    <string name="country">Country:</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_message">User Created!</string>

    <!-- countries -->
    <string-array name="countries">
        <item>Chelestra</item>
        <item>Arianus</item>
        <item>Pryan</item>
        <item>Abarrach</item>
        <item>Nexus</item>
    </string-array>

    <!-- order form strings -->
    <string name="welcome_prefix">Welcome\t</string>
    <string name="welcome_postfix">.</string>
    <string name="default_welcome_message">Welcome!</string>
    <string name="order_request">Please make an order:</string>
    <string name="order_button">Order</string>

    <!-- device names -->
    <string-array name="devices">
        <item>Samsung</item>
        <item>HTC</item>
        <item>Nexus</item>
        <item>LG</item>
        <item>Huawei</item>
    </string-array>

    <!-- order alert dialog strings -->
    <string name="order_alert_title">E-Kay</string>
    <string name="order_alert_content_prefix">Approve order for\t</string>
    <string name="order_alert_content_suffix">\?</string>
    <string name="order_alert_positiveText">YES</string>
    <string name="order_alert_negativeText">NO</string>
    <string name="order_sent">order sent!</string>

</resources>
